--- a/BankApp/registrationwindow.ui
+++ b/BankApp/registrationwindow.ui
@@ -7,30 +7,36 @@
     <x>0</x>
     <y>0</y>
     <width>300</width>
-    <height>458</height>
+    <height>489</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color:  #4ea5ff;</string>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>10</x>
+     <x>90</x>
      <y>10</y>
-     <width>230</width>
+     <width>101</width>
      <height>56</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
-     <pointsize>16</pointsize>
+     <family>Segoe MDL2 Assets</family>
+     <pointsize>30</pointsize>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+text-font: segoe;</string>
+   </property>
    <property name="text">
-    <string>
-Fill in all fields to register</string>
+    <string>Login</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_2">
@@ -44,9 +50,13 @@ Fill in all fields to register</string>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
+     <family>Segoe MDL2 Assets</family>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+text-font: segoe;</string>
    </property>
    <property name="text">
     <string>Name</string>
@@ -55,11 +65,14 @@ Fill in all fields to register</string>
   <widget class="QLineEdit" name="NameLineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>110</y>
-     <width>211</width>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
@@ -67,15 +80,19 @@ Fill in all fields to register</string>
     <rect>
      <x>40</x>
      <y>150</y>
-     <width>58</width>
+     <width>71</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
+     <family>Segoe MDL2 Assets</family>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+text-font: segoe;</string>
    </property>
    <property name="text">
     <string>Lastname</string>
@@ -84,11 +101,14 @@ Fill in all fields to register</string>
   <widget class="QLineEdit" name="LastnameLineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>170</y>
-     <width>211</width>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_4">
@@ -97,14 +117,17 @@ Fill in all fields to register</string>
      <x>40</x>
      <y>210</y>
      <width>58</width>
-     <height>16</height>
+     <height>21</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
+     <family>Segoe MDL2 Assets</family>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;</string>
    </property>
    <property name="text">
     <string>Login</string>
@@ -113,27 +136,33 @@ Fill in all fields to register</string>
   <widget class="QLineEdit" name="LoginLineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>230</y>
-     <width>211</width>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>270</y>
-     <width>58</width>
+     <y>280</y>
+     <width>81</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
+     <family>Segoe MDL2 Assets</family>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;</string>
    </property>
    <property name="text">
     <string>Password</string>
@@ -142,11 +171,14 @@ Fill in all fields to register</string>
   <widget class="QLineEdit" name="PasswordLineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>290</y>
-     <width>211</width>
+     <x>10</x>
+     <y>300</y>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white;</string>
    </property>
   </widget>
   <widget class="QLabel" name="label_6">
@@ -154,15 +186,19 @@ Fill in all fields to register</string>
     <rect>
      <x>40</x>
      <y>330</y>
-     <width>110</width>
+     <width>121</width>
      <height>16</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <family>Times New Roman</family>
+     <family>Segoe MDL2 Assets</family>
      <pointsize>11</pointsize>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+</string>
    </property>
    <property name="text">
     <string>Confirm Password</string>
@@ -171,21 +207,29 @@ Fill in all fields to register</string>
   <widget class="QLineEdit" name="ConfirmPasswordLineEdit">
    <property name="geometry">
     <rect>
-     <x>40</x>
+     <x>10</x>
      <y>350</y>
-     <width>211</width>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: white;</string>
    </property>
   </widget>
   <widget class="QPushButton" name="RegistrationButton">
    <property name="geometry">
     <rect>
-     <x>100</x>
-     <y>390</y>
-     <width>80</width>
+     <x>10</x>
+     <y>410</y>
+     <width>281</width>
      <height>24</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: 4e598c;
+background-color: white;
+border-radius: 5px;</string>
    </property>
    <property name="text">
     <string>PushButton</string>
@@ -200,6 +244,10 @@ Fill in all fields to register</string>
      <height>16</height>
     </rect>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;
+</string>
+   </property>
    <property name="text">
     <string>TextLabel</string>
    </property>
@@ -208,10 +256,13 @@ Fill in all fields to register</string>
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>370</y>
-     <width>49</width>
+     <y>380</y>
+     <width>211</width>
      <height>16</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: white;</string>
    </property>
    <property name="text">
     <string>TextLabel</string>
